# superstring-net-standard

./: .gitignore  .gitmodules  .npmignore  CMakeLists.txt  CMakeSettings.json  README.md  azure-pipelines.yml  binding.gyp  package.json  superstring-net-standard.sln
Superstring/: MarkerIndex.cs  TextBuffer.cs
samples/SuperstringSample/: Program.cs  SuperstringSample.csproj
script/: build-browser-version.sh  install-emscripten.sh
src/Superstring/: MarkerIndex.cs  Patch.cs  Superstring.csproj  SuperstringCoreExports.cs  TextBuffer.cs  WasmManager.cs
src/core/Superstring.CoreWrapper/: PointWrapper.cs
src/native-src/: CMakeLists.txt
src/native-src/bindings/: CMakeLists.txt  bindings.cc  change-wrapper.cc  change-wrapper.h  marker-index-wrapper.cc  marker-index-wrapper.h  noop.h  number-conversion.h  patch-wrapper.cc  patch-wrapper.h  point-wrapper.cc  point-wrapper.h  range-wrapper.cc  range-wrapper.h  string-conversion.h  text-buffer-snapshot-wrapper.h  text-buffer-wrapper.h  text-reader.h  text-writer.h
src/native-src/bindings/em/: patch.cc  point.cc  text-buffer.cc
src/native-src/core/: CMakeLists.txt
src/native-src/core/Superstring.CoreWrapper/: Point.cs
test/netcore/NetCoreUnitTests/: NetCoreUnitTests.csproj  PatchTest.cs
test/netcore/NetCoreUnitTests/Helpers/: PointHelpers.cs
